packages/parser/test/parser/E0134-colon-equals.txt
a :=
===== err =====
anonymous:1:5: ParseError: E0134 - Expected variable declaration initializer after colon equals sign
1 | a :=
  |     ^
